[bumpversion]
current_version = 0.4.0
commit = True
tag = False

[bumpversion:file:py/qsonic/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = qsonic
version = attr: qsonic.__version__
author = Naim Goksel Karacayli
author_email = ngokselk@gmail.com
description = Quasar continuum fitter for DESI
long_description = file: README.rst
license = MIT
project_urls = 
	Bug Reports=https://github.com/p-slash/qsonic/issues
	Documentation=http://qsonic.readthedocs.io/
	Source=https://github.com/p-slash/qsonic

[options]
package_dir = 
	=py
packages = find_namespace:
python_requires = >=3.7
install_requires = file: requirements.txt

[options.packages.find]
where = py

[options.entry_points]
console_scripts = 
	qsonic-fit = qsonic.scripts.qsonic_fit:main
	qsonic-calib = qsonic.scripts.qsonic_calib:main

[options.extras_require]
dev = 
	pytest
	flake8
	bump2version
doc = 
	sphinx
	sphinx-argparse
	sphinx-rtd-theme
pub = 
	build
	twine
